@@ -1,33 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX bootled-initd-1.0.0 519 SHA256 64e68e01bd7b0dbc341605f4aa3cc3ea93bed20ae9da37a5aeb3663f2a246d8f SHA512 8d0bf2bfb0c636408207e6db7b87dc23ba911dfbcb6859cf2dc2bb791af0ce097f7d87d79bceb9682b1261564df598f8275991accbe6d603d82b095724f0f69d WHIRLPOOL a867432951dd538e8fc59cc2c6477aac004afe7a4b6dcf542d77fea348762ff125110f97e5150a53d0e23579c371ea160a91edd1195d2b5caa95d0a646f1c7d9
-AUX bootled-initd-1.0.1 519 SHA256 64e68e01bd7b0dbc341605f4aa3cc3ea93bed20ae9da37a5aeb3663f2a246d8f SHA512 8d0bf2bfb0c636408207e6db7b87dc23ba911dfbcb6859cf2dc2bb791af0ce097f7d87d79bceb9682b1261564df598f8275991accbe6d603d82b095724f0f69d WHIRLPOOL a867432951dd538e8fc59cc2c6477aac004afe7a4b6dcf542d77fea348762ff125110f97e5150a53d0e23579c371ea160a91edd1195d2b5caa95d0a646f1c7d9
-AUX bootled-initd-1.0.2 519 SHA256 64e68e01bd7b0dbc341605f4aa3cc3ea93bed20ae9da37a5aeb3663f2a246d8f SHA512 8d0bf2bfb0c636408207e6db7b87dc23ba911dfbcb6859cf2dc2bb791af0ce097f7d87d79bceb9682b1261564df598f8275991accbe6d603d82b095724f0f69d WHIRLPOOL a867432951dd538e8fc59cc2c6477aac004afe7a4b6dcf542d77fea348762ff125110f97e5150a53d0e23579c371ea160a91edd1195d2b5caa95d0a646f1c7d9
-AUX copynetsetup-initd-1.0.0 581 SHA256 ce41423c515c3c709f7aa51f5816dc103f639a3399335c504b921e130855cbe2 SHA512 8aec6fae65a523f7aac4a61244071c52be6e020adf9c2eb46c5c61edbd47c5e733db416c06ca8cc41e522d08507c3bb9c0bbce6433434221ba851fde7c0320de WHIRLPOOL 707d1149e7a21520a340d7786ced965e2d53edf4e2c08edffbbac7f15a663c51f7f7134c71766d35692a3253e899d0d4329eaac710808aeff3bab71c49e63b2b
-AUX copynetsetup-initd-1.0.1 581 SHA256 ce41423c515c3c709f7aa51f5816dc103f639a3399335c504b921e130855cbe2 SHA512 8aec6fae65a523f7aac4a61244071c52be6e020adf9c2eb46c5c61edbd47c5e733db416c06ca8cc41e522d08507c3bb9c0bbce6433434221ba851fde7c0320de WHIRLPOOL 707d1149e7a21520a340d7786ced965e2d53edf4e2c08edffbbac7f15a663c51f7f7134c71766d35692a3253e899d0d4329eaac710808aeff3bab71c49e63b2b
-AUX copynetsetup-initd-1.0.2 773 SHA256 0b932fca9a6447a733e5adb37494cb0caab1ee010fe776b76c3945150838ddfe SHA512 c1f5a3c99d623da64b99e17c7d4fcf3a08bda0785bf7bfe65b3635675ece76e486ae63133177560e3af68d973c33eae3ea1b4d7ebaeb47dac7ac1dd9a0c3ef0e WHIRLPOOL 4e25acdf8b197d76e58b3907f77a5365757030851181227595afa93f1d378d62a43715278ce8570f2f90c36de4e649f3d2b5478828efaea2a0cea5dd394f3df0
-AUX poweroff-b2-1.0.1 238 SHA256 18e1274c3779f720d508f1c7ec86440038b563c544ee230178f1e81c774daa78 SHA512 504ce86677c5c84813a4e9149e127440a0f6e3026f2c316cbe9754e17fb65446e5969b013e1d11b90247af0afccdf48b6defb3fa059e4102baf26b640469f18b WHIRLPOOL b7baef8127610d3862480ce57a347960ccc5b3920b66334c93d786d3f1515402938b1e0dc4747c99398e890b29299400840c3b13c9fc3ad826c46996f460edf7
-AUX poweroff-b2-1.0.2 238 SHA256 18e1274c3779f720d508f1c7ec86440038b563c544ee230178f1e81c774daa78 SHA512 504ce86677c5c84813a4e9149e127440a0f6e3026f2c316cbe9754e17fb65446e5969b013e1d11b90247af0afccdf48b6defb3fa059e4102baf26b640469f18b WHIRLPOOL b7baef8127610d3862480ce57a347960ccc5b3920b66334c93d786d3f1515402938b1e0dc4747c99398e890b29299400840c3b13c9fc3ad826c46996f460edf7
-EBUILD b2-init-scripts-1.0.0.ebuild 725 SHA256 f3064bdcd87b0e5eb42a6e367f69528d1415d39fd430771729fb323ab1e22892 SHA512 b0fb9e76e230ee086c85957b8bcdc6d63a82b162a13ed04e832afdb7eb0284d3c29c2bcc7b6db75f3a5cfcd3c5312771eaf47968386fd975ec0961bb3de1c770 WHIRLPOOL 380b1fc4be96c9783996ab4cee34fa1724bb838fa43df5d7af61cf05e0d877e9144368f4b0166aca3f25d116a081f9b887f7015fa53d6f00d6f886394fee54d1
-EBUILD b2-init-scripts-1.0.1.ebuild 780 SHA256 54a9825aa3daca7f9aea34f3112d601b9bbe6278de808b5ea23af5d9aa6a6253 SHA512 3a4bde4ec22cb23e146ae60cf555b0de1dabc67b72087bb85c372a4dbdb879fe6a6962aa5ac3c15885c4e45f4cb6053bc842aa5cf98ac0b18157762dc83c04f2 WHIRLPOOL e133b0da676344bf6b6f4c281f3f2ff4496ea8f6c576a4c566697ee4312b3fb2e5d4bd7bf89bf7d30644ad963ca85417dbd11484d263e4cb210b718467a1cbd3
-EBUILD b2-init-scripts-1.0.2.ebuild 780 SHA256 54a9825aa3daca7f9aea34f3112d601b9bbe6278de808b5ea23af5d9aa6a6253 SHA512 3a4bde4ec22cb23e146ae60cf555b0de1dabc67b72087bb85c372a4dbdb879fe6a6962aa5ac3c15885c4e45f4cb6053bc842aa5cf98ac0b18157762dc83c04f2 WHIRLPOOL e133b0da676344bf6b6f4c281f3f2ff4496ea8f6c576a4c566697ee4312b3fb2e5d4bd7bf89bf7d30644ad963ca85417dbd11484d263e4cb210b718467a1cbd3
-MISC ChangeLog 755 SHA256 323f79df74a69b63c1d28a0817b1ea751ae8552d2830ab37c437ee51c7e2d04f SHA512 fc81a4d61efe00ce87af244f1f150e781ad33208c1edcffaad4280c959f8ea638cf7219638b0e2a54d35bdaaf982778d8bc4c1eb56a4b329b5713aee92b52ec3 WHIRLPOOL 527a0dac638f89fd67d7dab354ce9f2ddea64f730595f0f0d1b5e3d441658f7fa01848252a3f8b8ae3055b6dd1977a06064c6ea9466a948aba598ebbf96ac42c
+AUX bootled-initd-1 519 SHA256 64e68e01bd7b0dbc341605f4aa3cc3ea93bed20ae9da37a5aeb3663f2a246d8f SHA512 8d0bf2bfb0c636408207e6db7b87dc23ba911dfbcb6859cf2dc2bb791af0ce097f7d87d79bceb9682b1261564df598f8275991accbe6d603d82b095724f0f69d WHIRLPOOL a867432951dd538e8fc59cc2c6477aac004afe7a4b6dcf542d77fea348762ff125110f97e5150a53d0e23579c371ea160a91edd1195d2b5caa95d0a646f1c7d9
+AUX copynetsetup-initd-1 773 SHA256 0b932fca9a6447a733e5adb37494cb0caab1ee010fe776b76c3945150838ddfe SHA512 c1f5a3c99d623da64b99e17c7d4fcf3a08bda0785bf7bfe65b3635675ece76e486ae63133177560e3af68d973c33eae3ea1b4d7ebaeb47dac7ac1dd9a0c3ef0e WHIRLPOOL 4e25acdf8b197d76e58b3907f77a5365757030851181227595afa93f1d378d62a43715278ce8570f2f90c36de4e649f3d2b5478828efaea2a0cea5dd394f3df0
+AUX poweroff-b2-1 238 SHA256 18e1274c3779f720d508f1c7ec86440038b563c544ee230178f1e81c774daa78 SHA512 504ce86677c5c84813a4e9149e127440a0f6e3026f2c316cbe9754e17fb65446e5969b013e1d11b90247af0afccdf48b6defb3fa059e4102baf26b640469f18b WHIRLPOOL b7baef8127610d3862480ce57a347960ccc5b3920b66334c93d786d3f1515402938b1e0dc4747c99398e890b29299400840c3b13c9fc3ad826c46996f460edf7
+EBUILD b2-init-scripts-1.0.3.ebuild 768 SHA256 bab2d3efa84b0ae0d5084e5a62d2d45ebc83d8715ad56dff4b8458b0a508ef47 SHA512 794888b22c0db43b3dde185c3e9b0bc6e83a0aaaa1e2871a2ac3862aec77cfe80224fec4fe0e192b52aa502876370303768978c49dba11aa2a36b482a01edd7a WHIRLPOOL fc41a9b472199f742e51c3a59438f7b7728e12c9ecfddabef9c5fac3090ec51268a60541a0f62d4706b1418b2f02e852b3ab443105b81468aff216aaab2a723b
+MISC ChangeLog 1331 SHA256 3319184c1ff103d564a2c78b4886bff80edd3d6fa91c2aa5520e0e4fe4766048 SHA512 45c8ffb53f6b92dcbbd3bd55e0e2cdef0aa4b3ca3e753501fbfba28bd555923b97f02ca48907a8cd958bf5e88ff33597ed3891a8ab27dbdf9a8a3519f6625926 WHIRLPOOL f90662e8a41d50918ee4ab1bfd328f143e3a449145a31c25b981236c01c856c35addc634a10809d6862d5df2809a5bb5e769f3384335c3a013c07dbc8215536f
 MISC metadata.xml 617 SHA256 8c7b24fe692d73b75a64250b1487e5929ef1237ee5d48e77fe8e169a6daa7f70 SHA512 ef34283c758ebebb8664e2ba0983a067a749ea4edaf2f7fbd88daa0f649cda9cd327c0926066e6e5918bf702287685a427a374a3f0f88a7f9d60273cb1c80ae1 WHIRLPOOL e4607bb73f355b8b692f93647387fcd28f1956421d7dbffc9c3578cd0f9143aa21abccff8a7740bc7c2fff5d91ece893ebd5bd53135ddcf071e980f8f328b6d3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUwpTpAAoJEDHIDbLd52zqQSQP/jf+ztPaiu4CJjN7d2Pg9aMk
-/I2ZFkcmTPoPnDZt8qFjmhnPKqxXx+5h9/sJQfsX4wWFWUZ9Ul3u37CkUUXRYx75
-zAausUaEzTqUfTk4n0QZX/iWk6U9mPtTkz4ym622Ff0gE0A+8Hw+S3vUyDTWLftJ
-BGbSwiRdLg81N4tVHR5uihJZ19XAs5POqpdE4pW3ty2KHXp/RDqy22tkwo7c0BU3
-/dZLkcO7wjl3EA80F39Uv61U/fQls2K+QjV4YQc66/3YQhWws14Hxnhu2M2bv6E8
-92OpEs0qaEjqg0LGyKbyYsIFuDRFcsMQreV+6uOOJzJ6r0xTiNDu2RVbK/2D5TiM
-xtGZXmvvpFyCeuB9doxQaxMBnBZNysGTp6oX36+mP93Giy0GXoCja7B1crkQqPmJ
-sh40GqFPNzFUoqLI/SEGurxTJNSTwoqsIwOYi1XuQA+GXZSGpG0uu6IEzSXEIjip
-oAsY9o+RDYExvKwSs+vTpzWjfdXFyjMb1tURESD7p9N2R0rJPJDZDEs2hkhSlAy/
-e2sFJVMxmvJm/SpmCK8Z1DNF8NT3XiSjjkDHCbZvvM1qh/XiWhyvgT8UiOflQPfH
-wKTWoyHxNfHxQSluF87LGK/I8qHLprn4Hj316vqaNLDUPrCdqcIXgfyNdtSBw7v4
-e5PIWt4cRIzll6ii3D9a
-=N8Ml
+iQIcBAEBCAAGBQJUwssLAAoJEDHIDbLd52zqyzUP+gMZf6Nsajktg7KG1rEkfg0p
+a2k5dcjp56MR6djeQN7Ufo3s58U60M5w9URwSfy7ADgAyE1CuKxjy6Rpr+LhL9U+
+tTUjvJ8z9GSUxqaU6zP6aYrTbErcQy+J3RBGmvRTX7Ms9bE/17TRISDqFzA0i9/m
+kjKBPAeTyADSa3NrtPgA4KVocRGPDHszPq7rYcJAPq4p5DCWvRJH3t8MrIPvVdWw
+Ovb3D/bp3ZaXPv/ryg28cyTTWPP88+6X9cgen1vBg2LmhG18uMU+ucYvfhqADBBB
+NdH1D1IOSR7LCyQDyvxApDJGwM5EmHROwv2MCrvZlAstCGrweuTiA+rd+PYeshW1
+inB7Vi+izSAS1L8qoCCS3yUyiWnf7rnErjfJv2MUOY9JhFQn8o2RXqvcs5MCCdyn
+L37YyxjxIJC7kHjy9jyHiJCJxkt8wFBAuNf69v9j7uJ6dWwLuv/7pnXqxsJKWLKY
+0N/UXarACbIJ8hEHrk9Rd+7AqEAhvEw5I9F11LE6eaHKueclFdrpOKulWGE2zPAe
+AvB3ZTs3zkNAMEo1O6l767fYR6S6gEEyVHN2/vL7x1bTxAB5+9e2Ltmprir24l0k
+4fbUJUB9C+GLFLm/NsXY4mOg/7jryuiE/TUJnvA9PfuHrGVciXMSpRPLcMYJxsEg
+4qEypA2giVP3PWgO1Mr8
+=ipPF
 -----END PGP SIGNATURE-----
