@@ -1,25 +1,0 @@
-#!/sbin/runscript
-# Copy across network settings from fat32 /boot partition
-# if they are provided there (makes setup easier).
-# Copyright (c) 2015 sakaki <sakaki@deciban.com>
-# License: GPL 3.0+
-# NO WARRANTY
-
-depend() {
-    before net dns
-    need localmount
-    after bootmisc
-}
-
-start() {
-    ebegin "Starting copynetsetup"
-    mount /boot
-    if [ -f /boot/install/net ] ; then
-        cat /boot/install/net > /etc/conf.d/net
-    fi
-    if [ -f /boot/install/resolv.conf ] ; then
-        cat /boot/install/resolv.conf > /etc/resolv.conf
-    fi 
-    umount /boot
-    eend $?
-}
