@@ -2,6 +2,18 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*b2-init-scripts-1.0.3 (23 Jan 2015)
+
+  23 Jan 2015; sakaki <sakaki@deciban.com> -b2-init-scripts-1.0.0.ebuild,
+  -b2-init-scripts-1.0.1.ebuild, -b2-init-scripts-1.0.2.ebuild,
+  +b2-init-scripts-1.0.3.ebuild, +files/bootled-initd-1,
+  +files/copynetsetup-initd-1, +files/poweroff-b2-1,
+  -files/bootled-initd-1.0.0, -files/copynetsetup-initd-1.0.0,
+  -files/bootled-initd-1.0.1, -files/copynetsetup-initd-1.0.1,
+  -files/poweroff-b2-1.0.1, -files/bootled-initd-1.0.2,
+  -files/copynetsetup-initd-1.0.2, -files/poweroff-b2-1.0.2:
+  Change files/... version indexing; drop old
+
 *b2-init-scripts-1.0.2 (23 Jan 2015)
 
   23 Jan 2015; sakaki <sakaki@deciban.com> +b2-init-scripts-1.0.2.ebuild,
